<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dp">
	<Button
		android:id="@+id/safeset_button_setpwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:text="@string/alterpwd"
	/>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/safeset_tv_newpwd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/newpwd"
			android:visibility="gone"
		/>
		<EditText 
			android:id="@+id/safeset_edit_newpwd"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:visibility="gone"
		/>
	</LinearLayout>
	<Button
		android:id="@+id/safeset_button_setqstans"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:text="@string/alter_qstans"
	/>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/safeset_tv_question"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/question"
			android:visibility="gone"
		/>
		<EditText 
			android:id="@+id/safeset_edit_question"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:inputType="text"
		/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/safeset_tv_answer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/answer"
			android:visibility="gone"
		/>
		<EditText 
			android:id="@+id/safeset_edit_answer"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:inputType="text"
		/>
	</LinearLayout>
    <TextView
        android:id="@+id/safeset_submit_warning"
		android:text="@string/safeset_submit_warning"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:textColor="@color/white"
		android:background="@color/dark_grey"
	/>
	<LinearLayout 
	    android:id="@+id/safeset_layout_oldpwd"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/oldpwd"
		/>
		<EditText 
			android:id="@+id/safeset_edit_oldpwd"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
		/>
	</LinearLayout>
	
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:orientation="horizontal">
		<Button
			android:id="@+id/safeset_button_submit"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:text="@string/submit"
		/>
		<Button
			android:id="@+id/safeset_button_exit"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:paddingTop="10dp"
			android:paddingBottom="10dp"
			android:text="@string/exit"
		/>
	</LinearLayout>
</LinearLayout>
