<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <include layout="@layout/glory_actionbar_l"/>
    <TextView 
    	android:layout_width="fill_parent"
    	android:layout_height="150px"
    	android:gravity="center"
    	android:layout_marginTop="50px"
    	android:text="@string/login"
    	android:textSize="20sp"
    />
	<EditText
		android:id="@+id/login_edit_pwd"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_marginLeft="50px"
    	android:layout_marginRight="50px"
    	android:password="true"
    	android:autoText="false"
	/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30px"
		android:orientation="horizontal"
		android:gravity="center">
		<Button 
			android:id="@+id/login_button_ok"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:layout_marginRight="30px"
			android:padding="5px"
			android:text="@string/ok"
		/>
		<Button 
			android:id="@+id/login_button_exit"
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:padding="5px"
			android:text="@string/exit"
		/>
	</LinearLayout>
	<Button 
		android:id="@+id/login_imagebt_fgtpwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20px"
		android:paddingLeft="20px"
		android:paddingRight="20px"
		android:paddingTop="10px"
		android:paddingBottom="10px"
		android:layout_gravity="center_horizontal"
		android:text="@string/fgtpwd"
	/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20px"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/login_tv_qst"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10px"
			android:layout_marginRight="15px"
			android:text="@string/question"
			android:visibility="invisible"
		/>
		<TextView 
			android:id="@+id/login_tv_qstDetais"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
		/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20px"
		android:orientation="horizontal">
		<TextView 
			android:id="@+id/login_tv_ans"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10px"
			android:layout_marginRight="15px"
			android:text="@string/answer"
			android:visibility="invisible"
		/>
		<EditText 
			android:id="@+id/login_edit_answer"
			android:layout_width="200px"
			android:layout_height="wrap_content"
			android:visibility="invisible"
		/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10px"
		android:orientation="horizontal">
		<Button 
			android:id="@+id/login_button_submit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10px"
			android:layout_marginRight="15px"
			android:paddingLeft="20px"
			android:paddingRight="20px"
			android:text="@string/submit"
			android:visibility="invisible"
		/>
		<TextView 
			android:id="@+id/login_tv_showpwd"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
		/>
	</LinearLayout>
</LinearLayout>
