<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include android:id="@+id/actionbar"
        layout="@layout/glory_actionbar"/>
    <FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    <ScrollView 
	        android:id="@+id/setting_autofill_insert_form"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:scrollbars="vertical"
		    android:visibility="gone">
	        
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:padding="10dp">
		        
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/matchname"/>
		
			    <EditText 
			      android:id="@+id/setting_autofill_insert_match"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"/>
			
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/country"
				  android:layout_marginTop="10dp"/>
		
			    <EditText 
			      android:id="@+id/setting_autofill_insert_country"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"/>
			    
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/city"
				  android:layout_marginTop="10dp"/>
		
			    <EditText 
			      android:id="@+id/setting_autofill_insert_city"
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="5dp"/>
			    
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/search_region"
				  android:layout_marginTop="10dp"/>
			    
				<Spinner 
					android:id="@+id/setting_autofill_insert_region"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/tw_spinner_bk"/>
				
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/search_level"
				  android:layout_marginTop="10dp"/>
			    
				<Spinner 
					android:id="@+id/setting_autofill_insert_level"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/tw_spinner_bk"/>
					
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/search_court"
				  android:layout_marginTop="10dp"/>
			    
				<Spinner 
					android:id="@+id/setting_autofill_insert_court"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/tw_spinner_bk"/>
				
			    <TextView 
				  android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:text="@string/search_round"
				  android:layout_marginTop="10dp"/>
			    
				<Spinner 
					android:id="@+id/setting_autofill_insert_round"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/tw_spinner_bk"/>
		    </LinearLayout>
	    
	    </ScrollView>
	    <ListView 
	        android:id="@+id/setting_autofill_insert_dellist"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:visibility="gone"
	        />
    </FrameLayout>
</LinearLayout>
